<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.smartexpense.ai.ui.dashboard.DashboardFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.smartexpense.ai.ui.transactions.TransactionsFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/nav_add_expense"
        android:name="com.smartexpense.ai.ui.addexpense.AddExpenseFragment"
        android:label="@string/nav_add"
        tools:layout="@layout/fragment_add_expense" />

    <fragment
        android:id="@+id/nav_analytics"
        android:name="com.smartexpense.ai.ui.analytics.AnalyticsFragment"
        android:label="@string/nav_insights"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.smartexpense.ai.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_budget_limits"
        android:name="com.smartexpense.ai.ui.settings.BudgetLimitsFragment"
        android:label="Budget Limits"
        tools:layout="@layout/fragment_budget_limits" />

</navigation>
